--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "predis/predis": "^2.2",
         "vimeo/psalm": "^5.21",
         "wolfcharaa/abstract_factory": "main-dev"
     },
